[gd_scene load_steps=2 format=2]

[ext_resource path="res://Nodes/Areas/AreaInput/AreaInputEntered/AreaInputEntered.gd" type="Script" id=1]

[node name="AreaInputEntered" type="Area2D"]
script = ExtResource( 1 )

[node name="NameLocation" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="." to="." method="_on_AreaInputEntered_body_entered"]
[connection signal="mouse_entered" from="." to="." method="_on_AreaInputEntered_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_AreaInputEntered_mouse_exited"]
